--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-VE">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./img/bxs-layout.svg" type="image/x-icon">
+    <meta name="description" content="Pagina web de practica CSS social-oplesk">
+    <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Galeria NFT ~ @jeffdev1</title>
 </head>
 <body>
-    
+    <main class="contenedor-main">
+        <section class="nft">
+            <h2 class="nft__title">@Jeffdev1 ~ NFT #1</h2>
+            <p class="nft__collection">&#10004 Social Oplesk</p>
+            <figure class="nft__img-container">
+                <img class="nft__image" src="./img/nft-1.webp" alt="nft 1 de mi pagina web">
+                <figcaption class="nft__price">27.00<span class="nft__price-crypto"> SOL</span></figcaption>
+            </figure>
+            <span class="nft__likes">33 &#128525</span>
+        </section>
+        <!-- <section class="contenedor__card-nft"></section>
+        <section class="contenedor__card-nft"></section>
+        <section class="contenedor__card-nft"></section>
+        <section class="contenedor__card-nft"></section>
+        <section class="contenedor__card-nft"></section>
+        <section class="contenedor__card-nft"></section>
+        <section class="contenedor__card-nft"></section> -->
+    </main>
 </body>
 </html>
