--- a/index.html
+++ b/index.html
@@ -23,13 +23,39 @@
             </figure>
             <span class="nft__likes">33 &#128525</span>
         </section>
-        <!-- <section class="contenedor__card-nft"></section>
-        <section class="contenedor__card-nft"></section>
-        <section class="contenedor__card-nft"></section>
-        <section class="contenedor__card-nft"></section>
-        <section class="contenedor__card-nft"></section>
-        <section class="contenedor__card-nft"></section>
-        <section class="contenedor__card-nft"></section> -->
+        <section class="nft">
+            <h2 class="nft__title">@Jeffdev1 ~ NFT #2</h2>
+            <p class="nft__collection">&#10004 Social Oplesk</p>
+            <figure class="nft__img-container">
+                <img class="nft__image" src="./img/nft-4.webp" alt="nft 2 de mi pagina web">
+                <figcaption class="nft__price">32.00<span class="nft__price-crypto"> SOL</span></figcaption>
+            </figure>
+            <span class="nft__likes">101 &#128525</span>
+        </section>
+        <section class="nft"><h2 class="nft__title">@Jeffdev1 ~ NFT #3</h2>
+            <p class="nft__collection">&#10004 Social Oplesk</p>
+            <figure class="nft__img-container">
+                <img class="nft__image" src="./img/nft-5.webp" alt="nft 3 de mi pagina web">
+                <figcaption class="nft__price">6.00<span class="nft__price-crypto"> SOL</span></figcaption>
+            </figure>
+            <span class="nft__likes">25 &#128525</span>
+        </section>
+        <section class="nft"><h2 class="nft__title">@Jeffdev1 ~ NFT #4</h2>
+            <p class="nft__collection">&#10004 Social Oplesk</p>
+            <figure class="nft__img-container">
+                <img class="nft__image" src="./img/nft-7.webp" alt="nft 4 de mi pagina web">
+                <figcaption class="nft__price">2.50<span class="nft__price-crypto"> SOL</span></figcaption>
+            </figure>
+            <span class="nft__likes">8 &#128525</span>
+        </section>
+        <section class="nft"><h2 class="nft__title">@Jeffdev1 ~ NFT #5</h2>
+            <p class="nft__collection">&#10004 Social Oplesk</p>
+            <figure class="nft__img-container">
+                <img class="nft__image" src="./img/nft-2.png" alt="nft 5 de mi pagina web">
+                <figcaption class="nft__price">4062.00<span class="nft__price-crypto"> SOL</span></figcaption>
+            </figure>
+            <span class="nft__likes">834 &#128525</span>
+        </section>
     </main>
 </body>
 </html>
