--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-VE">
 <head>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dongle:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="./img/bxs-layout.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/icons8-nft-node-64.png" type="image/x-icon">
     <meta name="description" content="Pagina web de practica CSS social-oplesk">
     <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
